@@ -247,7 +247,7 @@ OBJECTS_TREE = {'functions': sorted(['pa_count_devices', 'pa_get_default_input',
                                     'pm_count_devices', 'pm_list_devices', 'sndinfo', 'savefile', 'pa_get_output_devices', 
                                     'pa_get_input_devices', 'midiToHz', 'sampsToSec', 'secToSamps', 'example', 'class_args', 
                                     'pm_get_default_input', 'pm_get_output_devices', 'pm_get_default_output', 'midiToTranspo',
-                                     'getVersion', 'reducePoints', 'serverCreated', 'serverBooted']),
+                                     'getVersion', 'reducePoints', 'serverCreated', 'serverBooted', 'distanceToSegment']),
         'PyoObject': {'analysis': sorted(['Follower', 'Follower2', 'ZCross']),
                       'controls': sorted(['Fader', 'Sig', 'SigTo', 'Adsr', 'Linseg', 'Expseg']),
                       'dynamics': sorted(['Clip', 'Compress', 'Degrade', 'Mirror', 'Wrap', 'Gate']),
